add docs for 0.4.3